# Project_PN

./: .gitignore  AGENTS.md  README.md  reasonix.toml
.agents/: hooks.json
.kimi-code/: local.toml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.tmp/: __script_check.js  audit_translations.json  audit_translations.py  audit_translations_ts.js  audit_translations_ts.json  ui-redesign-prototype.html  ui-style-01-minimal.html  ui-style-02-dark-glass.html  ui-style-03-warm-playful.html  ui-style-04-high-contrast.html  ui-style-05-material-dynamic-advanced.html  ui-style-05-material-dynamic.html  ui-style-06-desktop-tauri.html  ui-style-07-editorial.html  ui-style-08-gamified.html
backend/: .dockerignore  .env.example  Dockerfile  compose.yaml  go.mod  go.sum
deploy/: .deploy.env.example  .env.example  NETWORK_SETUP.md  README.md  compose.yaml  deploy-exception-runbook.md
docs/: GUIDE.md  README.md  backend-schema-brainstorm.md  dev-test-plan.md
frontend/: .env.example  .gitignore  App.tsx  Dockerfile.web  Project-PN-1.0.1-arm64.dmg  app.json  eas.json  index.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.json
frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
scripts/: deploy-remote.sh  dictionary_enricher.py  seed-dev-guest.sh  seed-dev-guest.sql  start-remote-quick-tunnel.sh  start-web-dev.sh  sync-docs-on-deploy.sh
(+294 files in other folders)
